--- a/proj.win32/SYNC_RESOURCE-myproject4.vcxproj
+++ b/proj.win32/SYNC_RESOURCE-myproject4.vcxproj
@@ -24,7 +24,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0FD5CA5A-D254-3A55-A28E-09258548566B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0.22000.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <Platform>Win32</Platform>
     <ProjectName>SYNC_RESOURCE-myproject4</ProjectName>
     <VCProjectUpgraderObjectName>NoUpgrade</VCProjectUpgraderObjectName>
@@ -74,7 +74,8 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message></Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files (x86)\CMake\bin\cmake.exe" -E echo "    copying to D:/PR10/mycocos2d-x/myproject4/proj.win32/bin/myproject4/$(Configuration)/Resources"
 if %errorlevel% neq 0 goto :cmEnd
@@ -98,7 +99,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message></Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files (x86)\CMake\bin\cmake.exe" -E echo "    copying to D:/PR10/mycocos2d-x/myproject4/proj.win32/bin/myproject4/$(Configuration)/Resources"
 if %errorlevel% neq 0 goto :cmEnd
@@ -122,7 +124,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message></Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files (x86)\CMake\bin\cmake.exe" -E echo "    copying to D:/PR10/mycocos2d-x/myproject4/proj.win32/bin/myproject4/$(Configuration)/Resources"
 if %errorlevel% neq 0 goto :cmEnd
@@ -146,7 +149,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message></Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files (x86)\CMake\bin\cmake.exe" -E echo "    copying to D:/PR10/mycocos2d-x/myproject4/proj.win32/bin/myproject4/$(Configuration)/Resources"
 if %errorlevel% neq 0 goto :cmEnd
@@ -162,7 +166,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <CustomBuild Include="D:\PR10\mycocos2d-x\myproject4\proj.win32\CMakeFiles\756606d5b243bd9dded83bd211169d5c\SYNC_RESOURCE-myproject4.rule">
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'"></Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+      </Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">setlocal
 "C:\Program Files (x86)\CMake\bin\cmake.exe" -E echo "Copying resources for myproject4 ..."
 if %errorlevel% neq 0 goto :cmEnd
@@ -176,7 +181,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\PR10\mycocos2d-x\myproject4\proj.win32\CMakeFiles\SYNC_RESOURCE-myproject4</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</LinkObjects>
       <VerifyInputsAndOutputsExist Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</VerifyInputsAndOutputsExist>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'"></Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+      </Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">setlocal
 "C:\Program Files (x86)\CMake\bin\cmake.exe" -E echo "Copying resources for myproject4 ..."
 if %errorlevel% neq 0 goto :cmEnd
@@ -190,7 +196,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:\PR10\mycocos2d-x\myproject4\proj.win32\CMakeFiles\SYNC_RESOURCE-myproject4</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkObjects>
       <VerifyInputsAndOutputsExist Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</VerifyInputsAndOutputsExist>
-      <Message Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'"></Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">
+      </Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">setlocal
 "C:\Program Files (x86)\CMake\bin\cmake.exe" -E echo "Copying resources for myproject4 ..."
 if %errorlevel% neq 0 goto :cmEnd
@@ -204,7 +211,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">D:\PR10\mycocos2d-x\myproject4\proj.win32\CMakeFiles\SYNC_RESOURCE-myproject4</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">false</LinkObjects>
       <VerifyInputsAndOutputsExist Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">false</VerifyInputsAndOutputsExist>
-      <Message Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'"></Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">
+      </Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">setlocal
 "C:\Program Files (x86)\CMake\bin\cmake.exe" -E echo "Copying resources for myproject4 ..."
 if %errorlevel% neq 0 goto :cmEnd
