--- a/MyCocos/MyCocos.cfg
+++ b/MyCocos/MyCocos.cfg
@@ -1,5 +1,5 @@
-<SolutionConfig Version="3.10.0.0">
-  <PublishDirectory Value="D:/Neo/myPro/Resources/" />
+<SolutionConfig Version="4.0.0.0">
+  <PublishDirectory Value="E:/mycocos2d-x/CocosStudio-Study/Resources/" />
   <PackageDirectory Value="package/" />
   <PublishType Value="Reference" />
   <SolutionSize Value="960 * 640" />
@@ -12,8 +12,8 @@
       <Value ctype="CocosProperties">
         <SolutionCodeType Value="Complete" />
         <ProgramLanguage Value="cpp" />
-        <CreateFrameworkVersion Value="cocos2d-x-3.10" />
-        <CurrentFrameworkVersion Value="cocos2d-x-3.10" />
+        <CreateFrameworkVersion Value="cocos2d-x-4.0" />
+        <CurrentFrameworkVersion Value="cocos2d-x-4.0" />
         <EngineType Value="SourceCode" />
       </Value>
     </Item>
