--- a/proj.win32/ALL_BUILD.vcxproj.filters
+++ b/proj.win32/ALL_BUILD.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="16.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CustomBuild Include="D:\PR10\mycocos2d-x\myproject4\CMakeLists.txt" />
+    <CustomBuild Include="E:\mycocos2d-x\CocosStudio-Study\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
