--- a/MyCocos/MyCocos.cfg
+++ b/MyCocos/MyCocos.cfg
@@ -1,5 +1,5 @@
 <SolutionConfig Version="3.10.0.0">
-  <PublishDirectory Value="E:/mycocos2d-x/CocosStudio-Study/Resources/" />
+  <PublishDirectory Value="D:/PR10/mycocos2d-x/myproject4/Resources/" />
   <PackageDirectory Value="package/" />
   <PublishType Value="Reference" />
   <SolutionSize Value="960 * 640" />
